[project]
name = "medtrack"
version = "1.0.0"
description = "Controle de medicamentos para idosos via CLI"
authors = [{ name = "Samuel Rodrigues Dos Santos" }]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
medtrack = "src.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "ARG"]
ignore = []
